--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,12 @@ jobs:
         run: |
           pwd
           ls -a
+          echo $GITHUB_SHA
+          echo $GITHUB_RESPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo "${{ githhub.token }}"
+          # get clone git@github:$GITHUB_RESPOSITORY
+          # get checkout $GITHUB_SHA
       - name: Checkout
         uses: actions/checkout@v1
       - name: List Files after checkout 
