--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,7 +13,7 @@ jobs:
           echo $GITHUB_SHA
           echo $GITHUB_RESPOSITORY
           echo $GITHUB_WORKSPACE
-          echo "${{ githhub.token }}"
+          echo "${{ github.token }}"
           # get clone git@github:$GITHUB_RESPOSITORY
           # get checkout $GITHUB_SHA
       - name: Checkout
