--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,6 @@
 name: Actions workflow
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   run-github-actions:
@@ -11,10 +11,10 @@ jobs:
           pwd
           ls -a
           echo $GITHUB_SHA
-          echo $GITHUB_RESPOSITORY
+          echo $GITHUB_REPOSITORY
           echo $GITHUB_WORKSPACE
           echo "${{ github.token }}"
-          # get clone git@github:$GITHUB_RESPOSITORY
+          # get clone git@github:$GITHUB_REPOSITORY
           # get checkout $GITHUB_SHA
       - name: Checkout
         uses: actions/checkout@v1
