--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,15 +1,34 @@
-name: Actions workflow
+name: Actions Workflow 
 
 on:
   push:
-  pull_request:
-    types: [closed, assigned, opened, reopened]
+    branches:
+      - master
+      - "feature/**" # matches featur/featA, feature/featB, doesn't match feature/feat/a
+      - "!feature/featc"
+    tags: 
+      - v1.*
+    paths: 
+      - "**.js"
+      - "!filename.js"
+    # paths-ignore:
+    # - 'docs/**'
+  # repository_dispatch:
+  #   types: [build]
+  # schedule:
+  #   - cron: "0/5 * * * *"
+  #   - cron: "0/6 * * * *" 
+  # push:
+  # pull_request:
+  #   types: [closed, assigned, opened, reopened]
 
-jobs:
-  run-github-actions:
+jobs: 
+  run-github-actions: 
     runs-on: ubuntu-latest
     steps:
-      - name: List Files
+      - name: playload
+        run: echo ${{ github.event.client_payload.env }}
+      - name: List Files 
         run: |
           pwd
           ls -a
@@ -17,19 +36,18 @@ jobs:
           echo $GITHUB_REPOSITORY
           echo $GITHUB_WORKSPACE
           echo "${{ github.token }}"
-          # get clone git@github:$GITHUB_REPOSITORY
-          # get checkout $GITHUB_SHA
-      - name: Checkout
+          # git clone git@github:$GITHUB_REPOSITORY
+          # git checkout $GITHUB_SHA
+      - name: Checkout 
         uses: actions/checkout@v1
-      - name: List Files after checkout 
+      - name: List Files After Checkout
         run: |
           pwd
           ls -a
-      - name: simple JS action
-        id: greet
+      - name: Simple JS Action
+        id: greet 
         uses: actions/hello-world-javascript-action@v1
         with: 
-          who-to-greet: Fei
-      - name: Log greeting Time
+          who-to-greet: John
+      - name: Log Greeting Time
         run: echo "${{ steps.greet.outputs.time }}"
-
