--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -1,19 +1,31 @@
-name: Matrix
+name: Matrix 
 on: push 
 
-jobs:
+jobs: 
   node-version:
-    strategy:
+    strategy: 
       matrix:
-        os: [macos-latest,ubuntu-latest, windows-lastest]
+        os: [macos-latest, ubuntu-latest, windows-latest] 
         node_version: [6, 8, 10]
-      max-parallel: 2
-    runs-on: ${{ matrix.os}}
-    steps:
-      - name: log node version 
-        run: node -v 
+        include: 
+          - os: ubuntu-latest
+            node_version: 8
+            is_ubuntu_8: "true"
+        exclude:
+          - os: ubuntu-latest
+            node_version: 6
+          - os: macos-latest
+            node_version: 8
+    runs-on: ${{ matrix.os }}
+    env: 
+      IS_UBUNTU_8: ${{ matrix.is_ubuntu_8 }}
+    steps: 
+      - name: Log node version 
+        run: node -v
       - uses: actions/setup-node@v1
         with:
-          node-version: ${{matrix.node_version}}
+          node-version: ${{ matrix.node_version }}
       - name: Log node version 
-        run: node -v 
+        run:  | 
+          node -v
+          echo $IS_UBUNTU_8
