--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,13 +1,13 @@
 name: Container
 on: push
 
-jobs:
+jobs: 
   node-docker:
     runs-on: ubuntu-latest
-    container: node:13.5.0-alpines3.10
+    container:
+      image: node:13.5.0-alpine3.10
     steps:
-      - name: Log node version 
+      - name: Log node version  
         run: |
-          node -v 
-          cat /etc/os/-release
-          
+          node -v
+          cat /etc/os-release
